examples/kitchen-sink/src/ui/pages/cookbook/state/scope/page.abide
<script>
import Recipe from '$ui/Recipe.abide'

/* Cookbook · reactive state · scope basics. */
const LIVE = '/reactive-state'
</script>

<h1 class="text-3xl font-bold">scope basics</h1>
<p class="mt-2 text-slate-600">
    <code class="font-mono">scope()</code> is the sole reactive surface. Destructure
    <code class="font-mono">{'{ state, computed, linked, effect }'}</code> off it once, then call them bare. A cell reads and
    writes like a plain variable.
</p>

<Recipe
    task="Create a local reactive cell"
    live={LIVE}
    code={`const { state } = scope()
let count = state(0)`}
    note={'`state(initial)` returns a writable cell you read and reassign as an ordinary variable. Destructure `state` from `scope()` first.'} />

<Recipe
    task="Read a cell in the template"
    live={LIVE}
    code={`<p>count is {count}</p>`}
    note={'Reading a cell in markup subscribes that spot — it re-renders when the cell changes, no wrapper or `.value`.'} />

<Recipe
    task="Update a cell from an event"
    live={LIVE}
    code={`<button onclick={() => (count += 1)}>increment</button>`}
    note={'Assign to the variable to update — the compiler routes it back through the cell. Any read of `count` re-runs.'} />

<Recipe task="Toggle a boolean" live={LIVE} code={`let open = state(false)

<button onclick={() => (open = !open)}>toggle</button>`} note={'A boolean cell is the idiom for panels, menus, and modals. Read it in a `{#if open}` to show/hide.'} />

<Recipe
    task="Update one field of an object cell"
    live={LIVE}
    code={`let form = state({ name: '', email: '' })

function setName(name) {
    form = { ...form, name }
}`}
    note={"Reassign the whole object — spread the old value and override the field. Mutating in place won't trigger reads."} />

<Recipe task="Add an item to a list" live={LIVE} code={`let items = state([])

function add(item) {
    items = [...items, item]
}`} note={'Build a new array; assignment is the signal. The same rule as objects — no `.push`, which mutates in place.'} />

<Recipe
    task="Remove an item from a list"
    live={LIVE}
    code={`function remove(id) {
    items = items.filter((item) => item.id !== id)
}`}
    note={"`filter` returns a fresh array. Key the rendering `{#for … by item.id}` so the removed row's node is the one dropped."} />

<Recipe task="Edit an item in a list" live={LIVE} code={`function rename(id, name) {
    items = items.map((item) => (item.id === id ? { ...item, name } : item))
}`} note={'`map` with a spread on the matching row — every other row keeps its identity, so keyed rendering patches just the one.'} />

<Recipe task="Track a selection set" live={LIVE} code={`let selected = state(new Set())

function toggle(id) {
    const next = new Set(selected)
    next.has(id) ? next.delete(id) : next.add(id)
    selected = next
}`} note={'Copy the Set, mutate the copy, reassign — the reactivity is in the assignment, so a new Set is what re-renders.'} />

<Recipe
    task="Clamp or coerce every write"
    live={LIVE}
    code={`let qty = state(1, (next) => Math.max(1, Math.min(99, Number(next) || 0)))`}
    note={"`state`'s second argument is a transform run on every write — clamp ranges, round, or coerce a string input to a number in one place."} />

<Recipe
    task="Reset state to its initial value"
    live={LIVE}
    code={`const INITIAL = { name: '', email: '' }
let form = state(INITIAL)

function reset() {
    form = INITIAL
}`}
    note={'Keep the initial in a constant and reassign it. For a draft that tracks a moving source, reach for `linked` instead (see derived).'} />

<Recipe
    task="Understand why bare state() is a compile error"
    live={LIVE}
    code={`// error: state is not defined
let count = state(0)

// correct: reach it through scope()
const { state } = scope()
let count = state(0)`}
    note={'`state`/`computed`/`linked`/`effect` only exist through `scope()`. This keeps every cell owned by a lexical scope with a known lifetime — the destructure-once idiom is the documented default.'} />

<Recipe
    task="Pass a scope to a child or a helper"
    live={LIVE}
    code={`const here = scope()

<Child parentScope={here} />`}
    note={'A scope is a passable value — hand it to a child or a helper and it can read, extend, or undo that scope. Walk to the top with `here.root()`.'} />
